fix coding error

--- a/echo_server/svr_cpp/Makefile
+++ b/echo_server/svr_cpp/Makefile
@@ -1,3 +1,3 @@
 all:
-	g++ -Wall -O2 -o echo_svr_thread_pool echo_svr_thread_pool.cpp
+	g++ -Wall -O2 -pthread -o echo_svr_thread_pool echo_svr_thread_pool.cpp
 	g++ -Wall -O2 -o echo_svr_epoll echo_svr_epoll.cpp
